[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "1313202406"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]
[project.urls]
Issues = "https://github.com/Mishchenko754/congenial-spork.git"